test/should_pass/basic_016.grg
actions basic_016;

rule r {
	pattern {
		x : Node;
		negative {
			x --> y : Node;
		}
	}
	replace {
		x --> y : Node;
	}
}

