test/should_fail/inh_attrib_002.grg
actions inh_attrib_002 using inh_attrib_model_002;

rule r {
	pattern {
	}
	replace {
	}
}

